--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -636,26 +636,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="groupOfHearts" translatesAutoresizingMaskIntoConstraints="NO" id="GyD-xC-PH4">
-                                <rect key="frame" x="0.0" y="240" width="375" height="430"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XP6-FL-05s">
-                                <rect key="frame" x="53" y="85" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jxq-Tr-uGF">
+                                <rect key="frame" x="312" y="20" width="47" height="38.5"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="32"/>
+                                <color key="textColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jxq-Tr-uGF">
-                                <rect key="frame" x="255" y="20" width="104" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="groupOfHeartsNEW" translatesAutoresizingMaskIntoConstraints="NO" id="PVG-rD-qsq">
+                                <rect key="frame" x="-227" y="119.5" width="821.5" height="832"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="PVG-rD-qsq" secondAttribute="height" multiplier="173:162" constant="-67.246913580246996" id="ffj-OW-Nvj"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="It's your turn Eliza!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XP6-FL-05s">
+                                <rect key="frame" x="16" y="94" width="266" height="38.5"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="32"/>
+                                <color key="textColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="PVG-rD-qsq" firstAttribute="top" secondItem="jxq-Tr-uGF" secondAttribute="bottom" constant="61" id="DAm-DV-Y57"/>
+                            <constraint firstItem="v6G-rd-gAG" firstAttribute="trailing" secondItem="XP6-FL-05s" secondAttribute="trailing" constant="93" id="ErC-Rk-QLR"/>
+                            <constraint firstAttribute="trailing" secondItem="PVG-rD-qsq" secondAttribute="trailing" constant="-255" id="Jh2-Tg-DuU"/>
+                            <constraint firstItem="jxq-Tr-uGF" firstAttribute="top" secondItem="v6G-rd-gAG" secondAttribute="top" constant="20" id="N0g-m7-AFv"/>
+                            <constraint firstAttribute="bottom" secondItem="PVG-rD-qsq" secondAttribute="bottom" constant="-172" id="N3B-ow-vap"/>
+                            <constraint firstItem="XP6-FL-05s" firstAttribute="leading" secondItem="JsR-5O-oEv" secondAttribute="leadingMargin" id="Rri-dA-JIU"/>
+                            <constraint firstItem="jxq-Tr-uGF" firstAttribute="trailing" secondItem="JsR-5O-oEv" secondAttribute="trailingMargin" id="dMU-14-Vns"/>
+                            <constraint firstItem="v6G-rd-gAG" firstAttribute="bottom" secondItem="XP6-FL-05s" secondAttribute="bottom" constant="647" id="oJ6-Fo-fJf"/>
+                            <constraint firstItem="XP6-FL-05s" firstAttribute="top" secondItem="v6G-rd-gAG" secondAttribute="top" constant="94" id="rJc-CA-SZC"/>
+                            <constraint firstItem="jxq-Tr-uGF" firstAttribute="leading" secondItem="v6G-rd-gAG" secondAttribute="leading" constant="312" id="reg-GG-HIx"/>
+                            <constraint firstItem="PVG-rD-qsq" firstAttribute="leading" secondItem="JsR-5O-oEv" secondAttribute="leading" constant="-227" id="uyI-00-ou1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="v6G-rd-gAG"/>
                     </view>
                     <navigationItem key="navigationItem" id="Dnj-1w-2LO"/>
@@ -667,7 +680,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2kg-Jo-wqX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="285.60000000000002" y="318.89055472263868"/>
+            <point key="canvasLocation" x="282.60869565217394" y="317.41071428571428"/>
         </scene>
         <!--Second Card Tela View Controller-->
         <scene sceneID="co0-B3-OWf">
@@ -1479,7 +1492,7 @@
         <image name="WelcomeToCoupliePhrase" width="295" height="116"/>
         <image name="backButton" width="36" height="60"/>
         <image name="finalScreenTheSentencesActivity" width="305" height="359"/>
-        <image name="groupOfHearts" width="375" height="430"/>
+        <image name="groupOfHeartsNEW" width="606" height="523"/>
         <image name="shakeYourPhoneIlustration" width="269" height="331"/>
         <image name="timedDiscussionIlustration" width="342" height="403"/>
         <image name="􀊖" width="49" height="50"/>
